[package]
name = "entrust-hsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entrust_api = { path = "../entrust_api" }
hsmcore = { path = "../hsmcore" }
loam-sdk-core = { workspace = true }
rand_core = { workspace = true }

[lib]
crate-type = ["staticlib"]
