[package]
name = "entrust_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_core = { path = "../agent_core" }
async-trait = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
entrust_api = { path = "../entrust_api" }
entrust_nfast = { path = "../entrust_nfast" }
google = { path = "../google" }
hsmcore = { workspace = true }
juicebox_hsm = { path = ".." }
juicebox-sdk-marshalling = { workspace = true }
observability = { path = "../observability" }
rand_core = { workspace = true, features = ["getrandom"] }
store = { path = "../store" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
