[package]
name = "entrust_agent"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_core = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
entrust_api = { workspace = true }
entrust_nfast = { workspace = true }
google = { workspace = true }
hsm_api = { workspace = true }
juicebox_marshalling = { workspace = true }
observability = { workspace = true }
service_core = { workspace = true }
store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
