[package]
name = "entrust_agent"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }
build = "../build_info/build_script.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_core = { workspace = true }
async-channel = { workspace = true }
build_info = { workspace = true }
clap = { workspace = true }
entrust_api = { workspace = true }
entrust_nfast = { workspace = true }
juicebox_marshalling = { workspace = true }
observability = { workspace = true }
retry_loop = { workspace = true }
service_core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
