[package]
name = "entrust_api"
edition = "2021"
version  = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juicebox_marshalling = { workspace = true }
serde = { workspace = true }
