[package]
name = "entrust_hsm"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entrust_api = { workspace = true }
hsm_api = { workspace = true }
hsm_core = { workspace = true }
juicebox_marshalling = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { workspace = true }

[lib]
crate-type = ["staticlib"]

[features]
# enables insecure features such as metrics
insecure = []
