[package]
name = "entrust_hsm"
edition = "2021"
build = "build.rs"
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dependencies]
entrust_api = { workspace = true }
hsm_api = { workspace = true }
hsm_core = { workspace = true }
juicebox_marshalling = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { workspace = true }

[lib]
crate-type = ["staticlib"]

[features]
# enables insecure features such as metrics
insecure = []
