[package]
name = "entrust_init"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
entrust_nfast = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
