[package]
name = "entrust_nfast"
version = "0.2.0"
edition = "2021"
links = "seelib"
build = "build.rs"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
