[package]
name = "entrust_nfast"
build = "build.rs"
edition = "2021"
version  = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
