[package]
name = "google"
version = "0.2.0"
edition = "2021"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp_auth = { workspace = true }
http = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
secrecy = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[lib]
doctest = false
