[package]
name = "google"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp_auth = { workspace = true }
http = { workspace = true }
observability = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
retry_loop = { workspace = true }
tonic = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lib]
doctest = false
