[package]
name = "hsm_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
async-recursion = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bitvec = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
digest = { workspace = true }
election = { workspace = true }
generic-array = { workspace = true }
hashbrown = { workspace = true }
hsm_api = { workspace = true }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
juicebox-sdk-noise = { workspace = true }
juicebox-sdk-voprf = { workspace = true }
lru-cache = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
spin = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
cbor-diag = { workspace = true }
expect-test = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rand_core = { workspace = true, features = ["getrandom"] }
hsm_core = { path = ".", features = ["dot"] }

[features]
dot = ["async-trait", "async-recursion"]
