[package]
name = "hsm_core"
edition = "2021"
version = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
digest = { workspace = true }
election = { workspace = true }
hashbrown = { workspace = true }
hsm_api = { workspace = true }
juicebox_marshalling = { workspace = true }
juicebox_noise = { workspace = true }
juicebox_oprf = { workspace = true }
juicebox_realm_api = { workspace = true }
lru-cache = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
spin = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
cbor-diag = { workspace = true }
expect-test = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rand_core = { workspace = true, features = ["getrandom"] }
hsm_core = { path = ".", features = ["dot"] }

[features]
dot = []
