[package]
name = "hsmcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
digest = { workspace = true }
hashbrown = { version = "0.13.2", features = ["serde"] }
hkdf = { workspace = true }
hmac = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
voprf = { workspace = true }
loam-sdk-core = { workspace = true }

[dev-dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
