[package]
name = "hsmcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
digest = { workspace = true }
generic-array = { workspace = true }
hashbrown = { version = "0.13.2", features = ["serde"] }
hmac = { workspace = true }
loam-sdk-core = { workspace = true }
loam-sdk-noise = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
