[package]
name = "load_balancer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dogstatsd = { workspace = true }
futures = { workspace = true }
hsmcore = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
juicebox_hsm = { path = ".." }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-networking = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
signal-hook = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
