[package]
name = "load_balancer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { path = "../agent_api" }
anyhow = { workspace = true }
blake2 = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true }
digest = { workspace = true }
futures = { workspace = true }
google = { path = "../google" }
hsmcore = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
juicebox-sdk-networking = { workspace = true }
juicebox-sdk-realm-auth = { workspace = true }
observability = { path = "../observability" }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
secret_manager = { workspace = true }
serde = { workspace = true }
service_core = { workspace = true }
signal-hook = { workspace = true }
store = { path = "../store" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
