[package]
name = "load_balancer"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_api = { workspace = true }
anyhow = { workspace = true }
blake2 = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
clap = { workspace = true }
digest = { workspace = true }
futures = { workspace = true }
google = { workspace = true }
hsm_api = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
juicebox_marshalling = { workspace = true }
juicebox_networking = { workspace = true }
juicebox_realm_api = { workspace = true }
juicebox_realm_auth = { workspace = true }
observability = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
secret_manager = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
service_core = { workspace = true }
store = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
