[package]
name = "merkle_tree_docgen"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { workspace = true }
clap = { workspace = true }
hsm_api = { workspace = true }
hsm_core = { workspace = true, features = ["dot"] }
juicebox_api = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
tokio = { workspace = true }
