[package]
name = "pubsub_api"
edition = "2021"
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
juicebox_realm_api = { workspace = true }
serde_json = { workspace = true }
